Make KArchive include hidden files in directories

acked by dfaure

BUG:129958

svn path=/trunk/KDE/kdelibs/; revision=744752